tests/frontend/pass/array/cross_inv.act
contract B

contract A

constructor
interface constructor()

creates

  uint x := 100


constructor
interface constructor(address<A> a)

iff

  a.x < 3

creates

  uint[3] arr := [1,2,3]

invariants

  arr[a.x] >= 0
