tests/frontend/fail/array/composite_array_mismatch.act
contract A

constructor
interface constructor()

creates

  uint[3][2][2] x := [ [ [0,0,0], [0,0,0] ], [ [0,0,0], [0,0,0] ] ]

transition f
interface f(uint[3][2][2] a)

storage

  x := [a, [ [0,0,0], [0,0,0] ] ]
